<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="loginViewModel"
            type="id.ac.ui.cs.mobileprogramming.hadlina.moneytracker.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/pb_login_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progress_bar"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/pb_login"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/circular_progress_bar" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="112dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/logo" />

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="248dp"
                    android:text="@string/app_name"
                    android:textStyle="bold"
                    android:textSize="28sp"
                    android:textColor="@color/text_color_app"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="160dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_email"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/login_email_hint"
                        android:textColorHint="#000"
                        app:boxBackgroundColor="@color/colorPrimaryDark"
                        app:errorEnabled="true"
                        app:helperTextTextColor="@color/colorSecondary"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.25">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_color_black"
                            android:text="@={loginViewModel.email}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password_hint"
                        android:textColorHint="#000"
                        app:boxBackgroundColor="@color/colorPrimaryDark"
                        app:endIconCheckable="false"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/ed_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:textColor="@color/text_color_black"
                            android:text="@={loginViewModel.password}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_login"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> loginViewModel.onLoginClicked()}"
                        android:text="@string/login_button"
                        android:background="@color/text_color"
                        android:textColor="@color/text_color_black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_password" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/text_color_black"
                        android:onClick="@{() -> loginViewModel.onRegisterClicked()}"
                        android:text="@string/login_register"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/btn_login" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>
